# hypermachines-runtime

./: .gitignore  Cargo.toml  index.js  loader.js  package.json
.github/workflows/: CI.yaml
libraries/rust/: Cargo.toml
libraries/rust/src/: lib.rs
machines/echo/: Cargo.toml  build.sh
machines/echo/src/: lib.rs
machines/hostcall-echo/: Cargo.toml  build.sh
machines/hostcall-echo/src/: lib.rs
npm/darwin/: package.json
npm/linux/: package.json
npm/linux-musl/: package.json
npm/win32/: package.json
src/: lib.rs
test/: all.js
test/machines/: echo.wasm  hostcall_echo.wasm
