[package]
name = "hypermachines-runtime"
version = "0.1.0"
authors = ["Andrew Osheroff <andrewosh@gmail.com>", "LongYinan <lynweklm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1.0", features = ["serde-json", "libuv"] }
napi-derive = { version = "0.5" }
log = "0.4.11"
anyhow = "1.0.32"
env_logger = "0.8.1"
sha2 = "0.9.1"
lazy_static = "1.4.0"
once_cell = "1.4.1"
wasmtime = "0.21.0"
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
mut_static = "5.0.0"
ref_thread_local = "0.0.0"
bytes = "0.6.0"
byteorder = "1.3.4"

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.3", features = ["disable_initial_exec_tls"] }

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "0.2"

[profile.release]
opt-level = 3
lto = true
